proc-macros/tests/ui/incorrect/rpc/rpc_empty_bounds.stderr
error[E0277]: the trait bound `<Conf as Config>::Hash: Serialize` is not satisfied
   --> tests/ui/incorrect/rpc/rpc_empty_bounds.rs:10:1
    |
10  | #[rpc(server, client, namespace = "foo", client_bounds(), server_bounds())]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `<Conf as Config>::Hash`
    |
note: required by a bound in `RpcModule::<Context>::register_method`
   --> $WORKSPACE/core/src/server/rpc_module.rs
    |
    |         R: Serialize,
    |            ^^^^^^^^^ required by this bound in `RpcModule::<Context>::register_method`
    = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `for<'de> <Conf as Config>::Hash: Deserialize<'de>` is not satisfied
  --> tests/ui/incorrect/rpc/rpc_empty_bounds.rs:10:1
   |
10 | #[rpc(server, client, namespace = "foo", client_bounds(), server_bounds())]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'de> Deserialize<'de>` is not implemented for `<Conf as Config>::Hash`
   |
   = note: required for `<Conf as Config>::Hash` to implement `DeserializeOwned`
note: required by a bound in `request`
  --> $WORKSPACE/core/src/client/mod.rs
   |
   |         R: DeserializeOwned,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `request`
   = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
